<resources>
    <string name="app_name">Mayi Tedavisi</string>
    <string name="action_settings">Ayarlar</string>

    <string name="kilo">Kilo [kg] (Örnek: 85)</string>
    <string name="boy">Boy [cm] (Örnek: 174)</string>
    <string name="idrar">Saatlik idrar [ml] (Örnek: 200)</string>
    <string name="kanama">Saatlik kanama [ml] (Örnek: 300)</string>
    <string name="idrar_kanama_tusu">Sonraki saatin sıvı ihtiyacını hesapla</string>
    <string name="son_yemek">Son yemek saati (Örnek: 2100)</string>
    <string name="op_baslangic">Ameliyat başlama saati (Örnek: 0830)</string>

    <string name="cins">Cinsiyet</string>
    <string name="erkek">Erkek</string>
    <string name="kadın">Kadın</string>

    <string name="turnike">Turnike</string>
    <string name="var">Var</string>
    <string name="yok">Yok</string>

    <string name="artroskopi">Artroskopi</string>
    <string name="kırık">ARİF</string>
    <string name="parsiyel_protez">Parsiyel protez</string>
    <string name="total_protez">Total protez</string>
    <string name="revizyon_enfekte_protez">Revizyon/Enfekte protez</string>

    <string name="kol">Kol</string>
    <string name="kalça">Kalça</string>
    <string name="bacak">Bacak</string>
    <string name="çoklukırık">Çoklu ameliyat</string>
    <string name="title_activity_mayi_tablosu">MayiTablosu</string>

    <string name="saat">SAAT</string>
    <string name="kristalloid">KRİSTALLOİD</string>
    <string name="kolloid">KOLLOİD</string>
    <string name="kan">KAN</string>

    <string name="title_activity_idrar_kanama_gir">IdrarKanamaGir</string>

</resources>
